packages/typ/tests/fixtures/diagnostics/0180_adt_nested_annotation_mismatch_05.ml.infer.expected
File "0180_adt_nested_annotation_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0180_adt_nested_annotation_mismatch_05 is not a valid module name.

File "0180_adt_nested_annotation_mismatch_05.ml", line 2, characters 32-36:
2 | let _ : rec_epsilon = { size = (true, 4); open_ = true }
                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
