packages/typ/tests/fixtures/diagnostics/0180_adt_nested_annotation_mismatch_05.ml
type rec_epsilon = { size : int * bool; open_ : bool }
let _ : rec_epsilon = { size = (true, 4); open_ = true }
